chore: implemented basic filter

--- a/docs/test.mdx
+++ b/docs/test.mdx
@@ -6,7 +6,6 @@ import MethodsTable from '@site/src/components/methods.js';
 import FilteredProfile from '@site/src/components/filteredMethods.js';
 
 
-
-<FilteredProfile props={["synthetic","magres"]} />
+<FilteredProfile props={["all","synthetic","magres","physical","pharma"]} />
 
  
