chore: clean-up methods table

--- a/docs/10_domains/30_physical_chemistry.mdx
+++ b/docs/10_domains/30_physical_chemistry.mdx
@@ -2,7 +2,7 @@
 title: "Physical and Computational Chemistry"
 ---
 
-import MethodsProfileTable from '@site/src/components/methodsProfile.js';
+import Methods from '@site/src/components/methods.js';
 
 :::info Summary:
 
@@ -96,7 +96,7 @@ Physical chemistry is an interdisciplinary science at the frontier between chemi
 
 # Methods Data Format Overview
 
-<MethodsProfileTable profile_to_show={"physical"} />
+<Methods defaultProfile={"physical"} />
 
 :::note *This table will be continuously updated with new recommendations on interoperable open file formats.
 :::
