--- a/docs/10_domains/60_pharmaceutical_chemistry.mdx
+++ b/docs/10_domains/60_pharmaceutical_chemistry.mdx
@@ -2,7 +2,7 @@
 title: "Medicinal/Pharmaceutical Chemistry"
 ---
 
-import MethodsProfileTable from '@site/src/components/methodsProfile.js';
+import Methods from '@site/src/components/methods.js';
 
 :::info Summary:
 
@@ -44,7 +44,7 @@ Using an ELN:
 - Digital data are obtained with analytical devices. An overview on file extensions, file sizes and converters for several analytical methods is given in the table below.
 - Raw data files in proprietary file formats should be saved alongside interoperable [open file formats](/docs/topics/format_standards) by using converters or the analytical device software. If no specific open format is currently available, an export as .txt or .csv is recommended. Please be aware that metadata included in the header of .txt or .csv files may not follow a defined (open) format and metadata should be additionally also added into the ELN.
 
-<MethodsProfileTable profile_to_show={"pharma"} />
+<Methods defaultProfile={"pharma"} />
 
 :::note *This table will be continuously updated with new recommendations on interoperable open file formats.
 :::
