--- a/docs/50_lead-by-example.mdx
+++ b/docs/50_lead-by-example.mdx
@@ -5,7 +5,9 @@ hide_table_of_contents: true
 
 import Lbe from '@site/src/components/LeadByExample.js';
 
-## Introduction
+
+<details>
+    <summary>Introduction</summary>
 
 NFDI4Chem has a clear vision of how chemistry research data will be collected, processed, archived, shared and published. The development of standards for metadata, minimum information, analytical data formats as well as publication standards includes sample datasets in a standard-compliant manner.
 
@@ -16,8 +18,7 @@ This collection also documents the process of evolving FAIRness of chemistry res
 Take a look at the list for inspiration as to what is already possible today!
 
 Do you want to have your published dataset highlighted here or do you need assistance in the preparation of your dataset for publication? Pledge your dataset to NFDI4Chem! More information can be found [here](https://www.nfdi4chem.de/index.php/2022/02/02/data-pledge-lets-lead-by-example-2/).
-
-## Publication Dataset Pairs
+</details>
 
 <Lbe />
 
