--- a/docs/50_lead-by-example.mdx
+++ b/docs/50_lead-by-example.mdx
@@ -20,7 +20,7 @@ Take a look at the list for inspiration as to what is already possible today!
 Do you want to have your published dataset highlighted here or do you need assistance in the preparation of your dataset for publication? Pledge your dataset to NFDI4Chem! More information can be found [here](https://www.nfdi4chem.de/index.php/2022/02/02/data-pledge-lets-lead-by-example-2/).
 </details>
 
-<Lbe useCategoriesList="false" />
+<Lbe />
 
 :::note *This list will be continuously updated with further publication dataset pairs.*
 :::
