chore: improve overall layout

--- a/docs/50_lead-by-example.mdx
+++ b/docs/50_lead-by-example.mdx
@@ -6,7 +6,7 @@ hide_table_of_contents: true
 import Lbe from '@site/src/components/LeadByExample.js';
 
 
-<details className="lbe">
+<details>
     <summary>Introduction</summary>
 
 NFDI4Chem has a clear vision of how chemistry research data will be collected, processed, archived, shared and published. The development of standards for metadata, minimum information, analytical data formats as well as publication standards includes sample datasets in a standard-compliant manner.
