fix: build error with admonitions

--- a/docs/50_lead-by-example.mdx
+++ b/docs/50_lead-by-example.mdx
@@ -22,5 +22,8 @@ Do you want to have your published dataset highlighted here or do you need assis
 
 <Lbe />
 
-:::note *This list will be continuously updated with further publication dataset pairs.*
+:::note
+
+*This list will be continuously updated with further publication dataset pairs.*
+
 :::
