--- a/docs/50_lead-by-example.mdx
+++ b/docs/50_lead-by-example.mdx
@@ -5,6 +5,9 @@ hide_table_of_contents: true
 
 import Lbe from '@site/src/components/LeadByExample.js';
 
+<details>
+    <summary>Introduction</summary>
+
 NFDI4Chem has a clear vision of how chemistry research data will be collected, processed, archived, shared and published. The development of standards for metadata, minimum information, analytical data formats as well as publication standards includes sample datasets in a standard-compliant manner.
 
 Herein we present representative as well as substantially complex real datasets from various subdisciplines of chemistry. These datasets were collected within NFDI4Chem, but also external contributions by early adopters via our [survey form](https://docs.google.com/forms/d/e/1FAIpQLSdd_4oNSM0Q4epJwxNU5zthL_0JroGSYl4ILMLR0G1Xo9YbRw/viewform) are listed, for which we provide support via a consulting service and data stewardship. 
