chore: reroute call of feature function

--- a/docs/10_domains/00_guide.mdx
+++ b/docs/10_domains/00_guide.mdx
@@ -2,7 +2,7 @@
 title: "Guide"
 ---
 
-import DomainFeatures from '/src/components/DomainFeatures';
+import N4CFeatures from '/src/components/N4CFeatures.js';
 
 Looking for information on managing research data in chemistry? Choose your chemical domain and find discipline-specific help on research data management.
 
@@ -20,5 +20,4 @@ The domain-specific profiles provide an overview of the individual RDM steps. Th
 
 Click on a button below to get started with your chemical domain. The domain-specific profiles will be continuously updated based on new developments and feedback.
 
-<DomainFeatures />
-
+<N4CFeatures feature="domains" />
