--- a/docs/20_role/00_guide.mdx
+++ b/docs/20_role/00_guide.mdx
@@ -2,7 +2,7 @@
 title: "Guide"
 ---
 
-import RoleFeatures from '/src/components/RoleFeatures.js';
+import N4CFeatures from '/src/components/N4CFeatures.js';
 
 Looking for information on managing research data in chemistry? Choose your role and find solutions for role-specific data management issues.
 
@@ -16,4 +16,4 @@ The role pages provide an overview of the individual RDM steps. The following to
 
 Click on a button below to get started with your role.
 
-<RoleFeatures />
+<N4CFeatures feature="roles" />
