--- a/docs/40_topics/70_machine-readable_chemical_structures.mdx
+++ b/docs/40_topics/70_machine-readable_chemical_structures.mdx
@@ -8,11 +8,13 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 ## Introduction
 
-Finding relevant articles based on IUPAC names or trivial names of molecules is a challenging task, while chemical identifiers allow for unambiguous identification of compounds. Redrawing of chemical structures is labour- and time intensive, while chemical table (CT) files can be used without any additional effort with any common structure drawing software. 
+Finding relevant articles based on IUPAC names or trivial names of molecules is a challenging task, while chemical identifiers allow for unambiguous identification of compounds. Redrawing of chemical structures is labour and time intensive, while chemical table (CT) files can be used without any additional effort with any common structure drawing software. 
 
 Having machine-readable chemical structures as [CT files](/docs/topics/ct_files) such as mol files, [InChI](/docs/topics/inchi) identifiers and [SMILES](/docs/topics/smiles) structure codes as part of a dataset associated with a research article will enhance its [findability](/docs/topics/fair) by making the article easily indexable and structure-searchable. This also improves [interoperability](/docs/topics/fair) and facilitates [reuse](/docs/topics/fair) of scientific work.
 
-The following will provide a tutorial on how to increase the machine-readability of chemistry research articles by providing machine-readable chemical structures as data files. Moreover, recommendations to provide structure codes and identifiers in a machine-readable supplementary table within the associated dataset are given.
+The following will provide a tutorial on how to increase the machine-readability of chemistry research articles by providing machine-readable chemical structures as data files within the associated dataset. Moreover, recommendations to provide structure codes and identifiers in a machine-readable supplementary table within the associated dataset are given. 
+
+While such information is not required for structured domain-specific repositories such as Chemotion Reopositoy, since this information is provided by the repository software, datasets in generic repositories benefit from this information. 
 
 Please note that there are currently limitations with [SMILES](/docs/topics/smiles) and [InChI](/docs/topics/inchi) for inorganic and especially organometallic compounds. 
 
@@ -28,7 +30,7 @@ The name of the file might be chosen following your lab journal entry and also n
 
 To retrieve SMILES, InChI and InChIKey in ChemDoodle select a structure, then choose Edit -> Copy As -> Daylight SMILES or IUPAC InChI. 
 
-<img align="center" src={useBaseUrl('/img/topics/Screenshots_ChemDoodle_SMILES_InChI_InChIKey.png')} alt="ChemDoodle_SMILES_InChI_InChIKey" />
+![ChemDoodle_SMILES_InChI_InChIKey](/img/topics/Screenshots_ChemDoodle_SMILES_InChI_InChIKey.png)
 
 (ChemDoodle v11.7.0, iChemLabs, LCC., Chesterfield, VA, United States, 2021.)
 
@@ -42,8 +44,7 @@ Choosing “IUPAC InChI” will also provide the InChIKey if enabled under Prefe
 
 To retrieve SMILES, InChI and InChIKey in ChemDraw Professional, select a structure, then choose Edit -> Copy As -> SMILES, InChI or InChIKey.
 
-<img align="center" src={useBaseUrl('/img/topics/Screenshots_ChemDraw_SMILES_InChI_InChIKey.png')} alt="ChemDoodle_SMILES_InChI_InChIKey" />
-
+![ChemDoodle_SMILES_InChI_InChIKey](/img/topics/Screenshots_ChemDraw_SMILES_InChI_InChIKey.png)"
 
 (ChemDraw Professional v20.1.0.11, PerkinElmer Informatics, Inc., Waltham, MA, United States, 2021.)
 
@@ -51,8 +52,7 @@ To retrieve SMILES, InChI and InChIKey in ChemDraw Professional, select a struct
 
 To retrieve SMILES, InChI and InChIKey in ACD/ChemSketch, select a structure, then choose Tools-> Generate -> SMILES Notation or InChI for Structure.
 
-<img align="center" src={useBaseUrl('/img/topics/Screenshots_ChemSketch_SMILES_InChI_InChIKey.png')} alt="ChemDoodle_SMILES_InChI_InChIKey" />
-
+![ChemDoodle_SMILES_InChI_InChIKey](/img/topics/Screenshots_ChemSketch_SMILES_InChI_InChIKey.png)
 
 (ACD/ChemSketch v2021.1.1, Advanced Chemistry Development, Inc., Toronto, ON, Canada, 2021.) 
 
@@ -62,8 +62,7 @@ Choosing InChI for Structure will also provide the InChIKey, if enabled under In
 
 To retrieve SMILES, InChI and InChIKey in MarvinSketch select a structure, then choose Edit -> Copy As. In a new windows choose Daylight SMILES, InChI/RInChI or InChIKey/RInChIKey.
 
-<img align="center" src={useBaseUrl('/img/topics/Screenshots_MarvinSketch_SMILES_InChI_InChIKey.png')} alt="ChemDoodle_SMILES_InChI_InChIKey" />
-
+![ChemDoodle_SMILES_InChI_InChIKey](/img/topics/Screenshots_MarvinSketch_SMILES_InChI_InChIKey.png)
 
 (MarvinSketch v21.18, ChemAxon, Ltd., Budapest, Hungary, 2021.)
 
@@ -74,8 +73,8 @@ Alternatively, SMILES, InChI and InChIKey can also be saved as text files by cho
 While the data files can be directly added to the dataset, additional information to enhance machine-readability might be provided as a [supplementary table](https://doi.org/10.1186/s13321-021-00520-4). This table should be also provided in a machine-readable text-based format such as a .csv file.
 
 It is recommended to add the following columns to this table:
-- number of structure in the research article
-- letter-code and number in your lab journal
+- local chemical structure identifier i.e. numbers of structures in the research article
+- local chemical sample symbol i.e. letter-code and number in your lab journal
 - SMILES
 - InChI and InChIKey
 
@@ -83,20 +82,20 @@ The letter-code and number in your lab journal should be included, as analytical
 
 Additionally, this table may also include further columns for:
 - IUPAC name
-- synonym, i.e. common and trivial names of a compound
-- PubChem_CIDs
-- CAS_RN
+- synonym i.e. common names of a compound
+- PubChem compound identifier
+- CAS registry number
 - comment (if required)
 
-Templates for this table are provided as [.ods](pathname://../../../assets/Supplementary_table_template.ods), [.xlsx](pathname://../../../assets/Supplementary_table_template.xlsx), and [.csv](pathname://../../../assets/Supplementary_table_template.csv) files. These template files also take advantage of [ontologies](/docs/topics/ontology) to unambiguously identify terms for humans and machines. PubChem_CIDs as well as CAS_RN are easily retrieved in [PubChem](https://pubchem.ncbi.nlm.nih.gov/) by searching via SMILES, InChI or InChIKey. If the repository allows to create a dataset and provides a DOI prior upload of the dataset, the DOI of the dataset can be added to this table.
+PubChem compound identifiers (CIDs) as well as CAS registry numbers are easily retrieved in [PubChem](https://pubchem.ncbi.nlm.nih.gov/) by searching via SMILES, InChI or InChIKey. 
 
-Care should be taken for SMILES and InChI to describe inorganic and organometallic compounds. 
+Templates for such a table are provided as [.ods](pathname://../../../assets/Supplementary_table_template.ods), [.xlsx](pathname://../../../assets/Supplementary_table_template.xlsx), and [.csv](pathname://../../../assets/Supplementary_table_template.csv) files. These template files also take advantage of [ontologies](/docs/topics/ontology) to unambiguously identify terms for humans and machines. 
 
-If the experimental work is documented in an [ELN](/docs/topics/eln), this table could also be provided by the ELN system. Chemotion ELN generates [SMILES](/docs/topics/smiles), [InChI](/docs/topics/inchi), InChIKey as well as RInChI and RInChIKey for compounds and reactions. These information are also available in Chemotion Repository i.e. such a supplementary table is not required with structured domain-specific repositories such as Chemotion Repository.
+If the experimental work is documented in an [ELN](/docs/topics/eln), these information could also be provided by the ELN system. Chemotion ELN generates [SMILES](/docs/topics/smiles), [InChI](/docs/topics/inchi), InChIKey as well as RInChI and RInChIKey for compounds and reactions. These information are also available in Chemotion Repository i.e. such a supplementary table is not required with structured domain-specific repositories such as Chemotion Repository, while datasets in generic repositories will profit from such a table.
 
-<img align="right" src='https://licensebuttons.net/l/zero/1.0/88x31.png' alt="CC0 badge" />
+*This article is licensed under a Creative Commons Universal (CC0 1.0) Public Domain Dedication International License.* 
 
-*This article is licensed under a Creative Commons Universal (CC0 1.0) Public Domain Dedication International License.*
+![CC0 badge](https://licensebuttons.net/l/zero/1.0/88x31.png)
 
 ----
 Main author: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
