das article: added alarm box

--- a/docs/40_topics/120_data_availability_statement.mdx
+++ b/docs/40_topics/120_data_availability_statement.mdx
@@ -35,6 +35,10 @@ The data generated and analysed in this study are not openly available due to [r
 
 Data sharing is not applicable, as no new data was generated or analysed in this study.
 
+:::danger Notice:                                
+Please note that data availability statements such as *'data available on request from the authors'* and *'authors have elected not to share data'* are unFAIR, as the data is neither findable nor accessible. Furthermore, statements such as *'data available in supplementary material of the article'* are unFAIR, if data is kept in supplementary PDFs, as this data is not interoperable and, hence, difficult to be reused.
+:::
+
 ## Sources and further information
 
 - [Data Sharing in PLOS One: An analysis of Data Availability Statements](https://doi.org/10.1371/journal.pone.0194768)
