das article: removed html code for image and added image in markdown

--- a/docs/40_topics/120_data_availability_statement.mdx
+++ b/docs/40_topics/120_data_availability_statement.mdx
@@ -44,9 +44,9 @@ Please note that data availability statements such as *'data available on reques
 - [Data Sharing in PLOS One: An analysis of Data Availability Statements](https://doi.org/10.1371/journal.pone.0194768)
 - [The Impact on Authors and Editors of Introducing Data Availability Statements at Nature Journals](https://doi.org/10.2218/ijdc.v13i1.614)
 
-<img align="right" src='https://licensebuttons.net/l/zero/1.0/88x31.png' alt="CC0 badge" />
-
 *This article is licensed under a Creative Commons Universal (CC0 1.0) Public Domain Dedication International License.*
+
+![CC0 badge](https://licensebuttons.net/l/zero/1.0/88x31.png)
 
 ----
 Main author: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
