--- a/docs/40_topics/120_data_availability_statement.mdx
+++ b/docs/40_topics/120_data_availability_statement.mdx
@@ -43,6 +43,8 @@ Please note that data availability statements such as *'data available on reques
 
 - [Data Sharing in PLOS One: An analysis of Data Availability Statements](https://doi.org/10.1371/journal.pone.0194768)
 - [The Impact on Authors and Editors of Introducing Data Availability Statements at Nature Journals](https://doi.org/10.2218/ijdc.v13i1.614)
+- [Joint Declaration of Data Citation Principles](https://doi.org/10.25490/a97f-egyk)
+- [Data Access Committee - European Genome-Phenome Archive ](https://ega-archive.org/submission/data_access_committee)
 
 *This article is licensed under a Creative Commons Universal (CC0 1.0) Public Domain Dedication International License.*
 
