added info on max_path, which is usually 255 characters but might depend on OS and or file system used. Some of these support more characters or need some non-standard adjustments to accept more characters.

--- a/docs/30_data/30_data_organisation.mdx
+++ b/docs/30_data/30_data_organisation.mdx
@@ -21,7 +21,7 @@ We need short and descriptive file names as an identifier for a document. Useful
 
 Try to think about the different statuses (raw data, draft, temporary, finished, ...) and types (editable source format like textfiles or csv in contrast to export formats such as PDF) of your documents.
 
-Find a balanced set of elements: Too many make it difficult to grasp quickly, while too few elements rapidly exhaust the possible namespace. Be aware of the maximum number of characters for path names.
+Find a balanced set of elements: Too many make it difficult to grasp quickly, while too few elements rapidly exhaust the possible namespace. Be aware of the maximum number of characters for path names, which is usually 255 characters.
 
 :::note General basics for naming files:
 * Order the elements from general to specific.
