data storage: typo and other minor changes

--- a/docs/30_data/50_data_storage.mdx
+++ b/docs/30_data/50_data_storage.mdx
@@ -13,15 +13,15 @@ Let's discuss different storage solutions along a possible workflow. Think of al
 When planning [data management](/docs/data/dmp/), think about storage solutions and request short-term and long-term storage in advance.
 
 #### Necessary requirements when designing a storage system:
-- space requirements for collection or generation raw data including temporary files ("fast storage")
+- space requirements for collection or generation of raw data including temporary files ("fast storage")
 - space requirements for data that can be permanently accessed over the duration of the project
-- access to the data (in case of collaborative projects), how do they expect to access the data and for what purpose
-- transfer speed
+- access requirements to the data (in case of collaborative projects), how do they expect to access the data and for what purpose
+- transfer speed requirements
 - sharing opportunities, guidelines for data sharing outside the institute, compliance and rights management
 - "read-only" copy of the original raw data in a separate location (not editable)
 - how long raw data, as well as data processing pipelines and analysis workflows need to be stored, especially after the end of the project
 - [metadata](/docs/topics/metadata/): identifier and file description, associated with your data
-- keeping track of the changes (version control), conflict resolution, data mentoring and back-tracing capabilities
+- requirements on version control to keep track of changes, conflict resolution, data mentoring and back-tracing capabilities
 
 Involve the IT team of your home organisation, they can also provide advice on a tiered storage system:
 - "hot" storage: fast access speed, high access frequency, high value data -> high cost
@@ -41,7 +41,7 @@ Why? Sometimes it's not a technical problem, but a "layer-8"-issue: human error.
 
 ### Ok, I'm lost - this is far from my business.
 
-Many of the requirements are often solved by dedicated [repositories](/docs/topics/repositories/). It is also worth taking a look at group drives or cloud services such as NextCloud (on-premises). Your local IT team will help you with services that they normally support. But nevertheless: Make sure to generate good documentation (i.e., README file) and metadata together with the data. Check if your institute provides a (meta)data management system, such as iRODS, DataVerse, FAIRDOM-SEEK or OSF.
+Many of the requirements are often solved by dedicated [repositories](/docs/topics/repositories/). It is also worth taking a look at group drives or cloud services such as NextCloud (on-premises). Your local IT team and computing centre will help you with services that they usually support. But nevertheless: Make sure to generate good documentation (i.e., README file) and metadata together with the data. Check if your institute provides a (meta)data management system, such as iRODS, DataVerse, FAIRDOM-SEEK or OSF.
 
 
 ## Nirvana - your data in FAIR-paradise
