--- a/docs/20_role/40_data_steward.mdx
+++ b/docs/20_role/40_data_steward.mdx
@@ -10,6 +10,7 @@ The role of a data steward is fairly new in research and thus is still evolving 
 
 From this definition, it follows that a data steward is concerned with, in broad terms, ensuring the quality of the research data throughout the [research data life cylce](../40_topics/110_data_life_cycle.mdx) by applying the [FAIR Data Principles](../40_topics/01_fair.mdx).
 
+
 ## Tasks and Skills
 
 A data steward's task can take on various forms, often depending on the exact position within the organization and the individual's personal skill set and background. The duties may involve defining appropriate [repositories](../40_topics/20_repositories.mdx) for [data publication](../30_data/60_data_publication.mdx), consulting on [data formats](../40_topics/40_format_standards.mdx) and [metadata](../40_topics/30_metadata.mdx) standards, setting up data documentation and metadata management systems, e.g. through an [electronic laboratory notebook (ELN)](../40_topics/10_eln.mdx), and training researchers on [best practices](../40_topics/60_best_practice.mdx). The [Engaging Researchers with Data Management: The Cookbook](https://www.openbookpublishers.com/product/1080) elaborates on the various tasks and skills for the role of data steward. In it, Alastair Dunning, the Head of
@@ -23,6 +24,8 @@ Data stewards may work directly at an institute, but, in Germany, many are part 
 
 To efficiently manage data and maintain an overview, data stewards can use a [Data Management Plan](../30_data/10_dmp.mdx) as a supporting tool.
 
+Recently, a [BMBF](https://www.bmbf.de/bmbf/de/home/home_node.html)-funded project titled [DataStew](https://www.ub.uni-koeln.de/forschen_publizieren/forschen/forschungsdaten_managen/datastew/index_ger.html) has been analyzing the concept of data stewardship in the German academic landscape and identifying various stakeholder requirements to be able to provide recommendations for education and training for the role. Similar to the above-mentioned Dutch project, the first [results](https://doi.org/10.5281/zenodo.7327371) here show the multi-faceted task areas assigned to data stewards. From consultating on general RDM services, development or expansion of IT-tools and infrastructure for RDM in research, discipline-specific consulting, conducting their own data-focused research for specific disciplines, to occupying coordinative roles, one data steward position is rarely like the next.
+
 ### Data Stewards in Chemistry
 
 Chemical research is often a combination of observational data and digital data. While the focus in RDM and data stewardship typically lies on the latter—as emphasized in the definition quoted at the beginning of this article—the oberservational aspect cannot be ignored. Traditionally, this information is recorded in hand-written lab journals. Here, data stewards must understand the type of laboratory work carried out and assist in selecting appropriate ELNs to digitize this type of information. For digital data, data stewards must be aware of community-specific standards for data formats and [minimum information (MI) regarding metadata](../40_topics/30_metadata.mdx) . With this knowledge, they can assist in efficiently implementing data workflows that automate data transfer from device to secure storage locations, data format conversions, and metadata annotation. For example, [Chemotion ELN's device integration](https://www.chemotion.net/chemotionsaurus/docs/category/device-integration) can facilitate such workflows, while directly connecting the data to molecules and reactions recorded in the ELN. Such processes allow for a well-documented [dataset to be published](../30_data/60_data_publication.mdx) in [repositories](../40_topics/20_repositories.mdx) alongside the results reported in journal articles.
@@ -31,10 +34,12 @@ Chemical research is often a combination of observational data and digital data.
 
 Due to their wide breadth of duties, data stewards are continuously involved in networking, exchange, and furthering their own knowledge on RDM approaches, best practices, tools, and services. The RWTH Aachen University, for example, holds a monthly [Open RDM Network Meeting](https://www.rwth-aachen.de/go/id/mkbr/file/9-6699/) (in German) geared at data stewards, while state initiatives such as [fdm.nrw](https://www.fdm.nrw/) offer various networking and training opportunities. NFDI4Chem also organizes an entry-level workshop series titled [FAIR Research Data Management: Basics for Chemists](https://www.nfdi4chem.de/index.php/event/workshop-fair-research-data-management-basics-for-chemists/) for researchers and data stewards alike and focuses on research data management concepts and tools in chemistry.
 
-## Sources and further information
+## Sources and Further Information
 
 - [Final report: Towards FAIR data steward as profession for the lifesciences. Report of a ZonMw funded collaborative approach built on existing expertise](https://doi.org/10.5281/zenodo.3474630) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3474630.svg)](https://doi.org/10.5281/zenodo.3474630)
 - [Connie Clare, Maria Cruz, Elli Papadopoulou, James Savage, Marta Teperek, Yan Wang, Iza Witkowska, and Joanne Yeomans. 2019.Engaging Researchers with Data Management: The Cookbook (epub).OpenBookPublishers](https://doi.org/10.11647/OBP.0185)
 - [A community consultation on career tracks for data stewards - IDCC16 lightning talk and RDA VP17 poster presentation ![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.4707028.svg)](https://doi.org/10.5281/zenodo.4707028)
 - German: [Aufgaben- und Kompetenzspektrum der Data Stewards an der RWTH Aachen University : generell und explizit am Beispiel des Sonderforschungsbereichs 1382](https://doi.org/10.17192/bfdm.2021.3.8352)
 - German: [Data Stewards an den TU9-Universitäten - Bestandsaufnahme, Handlungsfelder und Kooperationspotenzial](https://doi.org/10.17192/bfdm.2022.1.8364)
+- German: [Forschung unterstützen: Empfehlungen für Data Stewardship an akademischen Forschungsinstitutionen - Ergebnisse des Projektes DataStew](https://doi.org/10.5281/zenodo.7327371) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.7327371.svg)](https://doi.org/10.5281/zenodo.7327371)
+ 
