chore: remove superscript links

--- a/docs/00_intro.mdx
+++ b/docs/00_intro.mdx
@@ -9,13 +9,14 @@ import IntroButton from '@site/src/components/IntroButton.js';
 <img alt="Data LifeCycle" src={useBaseUrl('/img/Intro/DataLifeCycle_KB.svg')} width="500" align="right" vspace="10" hspace="10"/>
 
 The NFDI4Chem knowledge base provides information and recommendations for digitising all key steps in chemical research to support scientists in their efforts to collect, store, process, analyse, disclose, and reuse research data. This knowledge base is inspired by [RDMkit](https://rdmkit.elixir-europe.org/index.html) but has been tailored specifically towards Chemists as end-users.
-Actions to promote Open Science and Research Data Management in accordance with the FAIR data principles are presented by everyday users and range from planning and implementation to publication and re-use.<sup>[1](https://riojournal.com/article/55852/)</sup>
+
+Actions to [promote Open Science and Research Data Management](https://riojournal.com/article/55852/) in accordance with the FAIR data principles are presented by everyday users and range from planning and implementation to publication and re-use.
 
 
 ## Why is RDM important for chemistry?
 
 :::danger Notice:                                
-Research Data Management in chemistry is currently not systematically organised and individual solutions of single institutions lead to low visibility, accessibility, and usability of research results. The added value of preserving and researching scientific data in chemistry is particularly high because the significance of the data is often immortal and older data can also be used for current investigations. In most cases, it is even mandatory to be able to access older data, since experimental data or complex simulation data in particular can only be generated with great effort. A loss of previously acquired data can be an irretrievable loss of knowledge.<sup>[1](https://riojournal.com/article/55852/)</sup>
+Research Data Management in chemistry is currently not systematically organised and individual solutions of single institutions lead to low visibility, accessibility, and usability of research results. The added value of preserving and researching scientific data in chemistry is particularly high because the significance of the data is often immortal and older data can also be used for current investigations. In most cases, it is even mandatory to be able to access older data, since experimental data or complex simulation data in particular can only be generated with great effort. A loss of previously acquired data can be an [irretrievable loss of knowledge](https://riojournal.com/article/55852/).
 :::
 
 - prevention of data loss and data security
