added space around / in pharm chem

--- a/docs/10_domains/60_pharmaceutical_chemistry.mdx
+++ b/docs/10_domains/60_pharmaceutical_chemistry.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Medicinal/Pharmaceutical Chemistry"
+title: "Medicinal / Pharmaceutical Chemistry"
 ---
 
 import Methods from '@site/src/components/Methods.js';
