workaround for ePIC image link problem (??)

--- a/docs/40_topics/61_identifiers/100_pid.mdx
+++ b/docs/40_topics/61_identifiers/100_pid.mdx
@@ -38,10 +38,9 @@ The [ORCID record](https://doi.org/10.1038/462825a) connected to ORCID iDs inclu
 In addition to ORCID iDs as non-proprietary PIDs for authors, there are also proprietary author identifiers such as Thomson Reuters’ [Web of Science ResearcherID](https://www.researcherid.com/#rid-for-researchers) and Elsevier’s [Scopus Author ID](https://www.scopus.com/freelookup/form/author.uri).
 
 ## ePICs
+<!--![ePIC Header](../../static/img/topics/EPIC-header_transparent.png)-->
 
-![ePIC Header](../../static/img/topics/EPIC-header_transparent.png)
-
-<!--<img align="left" src={useBaseUrl("/img/topics/EPIC-header_transparent.png")} width="80" alt="ePIC Header logo" vspace="12" hspace="20" /> -->
+<img align="left" src={useBaseUrl("/img/topics/ePIC-head.png")} width="200" alt="ePIC Header logo" vspace="12" hspace="20" />
 
 The Persistent Identifier for eResearch ([ePICs](https://www.pidconsortium.net/)), like the DOI, are based on the [Handle.Net Registry (HNR)](https://www.handle.net/) system yet they are intended to be used for unpublished digital research objects, while [DOIs](#dois) are intended for published objects. To this end, ePICs may be assigned even at early stages of research to locate research data and may be used by various research data management or archiving systems. Upon publication of a dataset, the full research data can be linked via the ePIC, for example, in cases that include proprietary or sensitive information. 
 
