chore: added slugs to all mdx files

--- a/docs/10_domains/10_synthetic_chemistry.mdx
+++ b/docs/10_domains/10_synthetic_chemistry.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Synthetic Organic / Inorganic Chemistry"
 nfdi4chem-id: dsoic
+slug: "/docs/synthetic_chemistry"
 ---
 
 import Methods from '@site/src/components/Methods.js';
