--- a/docs/10_domains/30_physical_chemistry.mdx
+++ b/docs/10_domains/30_physical_chemistry.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Physical and Computational Chemistry"
+slug: "/docs/physical_chemistry"
 ---
 
 import Methods from '@site/src/components/Methods.js';
