--- a/docs/10_domains/60_pharmaceutical_chemistry.mdx
+++ b/docs/10_domains/60_pharmaceutical_chemistry.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Medicinal / Pharmaceutical Chemistry"
+slug: "/docs/pharmaceutical_chemistry"
 ---
 
 import Methods from '@site/src/components/Methods.js';
