--- a/docs/30_data/40_data_documentation.mdx
+++ b/docs/30_data/40_data_documentation.mdx
@@ -3,6 +3,7 @@ title: "Data Documentation"
 nfdi4chem-description: description of everything that "your future-self" would need to know
 nfdi4chem-id: data_documentation
 nfdi4chem-tags: [data_organisation, data_storage, repositories]
+slug: "/docs/data_documentation"
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
