--- a/docs/30_data/50_data_storage.mdx
+++ b/docs/30_data/50_data_storage.mdx
@@ -3,6 +3,7 @@ title: "Data Storage and Archiving"
 nfdi4chem-description: how to find appropriate storage solutions
 nfdi4chem-id: data_storage
 nfdi4chem-tags: [data_organisation, data_storage, repositories]
+slug: "/docs/data_storage"
 ---
 
 If you plan to collect data and process it into information, you should consider different types of storage with regard to security, backup, access time and sharing with others. It is also of interest [how to estimate the computational resources for data processing and analysis](https://rdmkit.elixir-europe.org/storage.html#how-do-you-estimate-computational-resources-for-data-processing-and-analysis). There are different requirements for the entire [Data Life Cycle](/docs/topics/data_life_cycle/). Regarding the workflows used in a project, care should also be taken when securing these workflows and tools (software version!) to ensure the reproducibility of results.
