--- a/docs/50_data_publication/70_machine-readable_chemical_structures.mdx
+++ b/docs/50_data_publication/70_machine-readable_chemical_structures.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Machine-Readable Chemical Structures"
+slug: "/docs/machine-readable_chemical_structures"
 ---
  # Machine-Readable Chemical Structures
 
