fix: double /docs in slugs

--- a/docs/00_intro/20_data_life_cycle.mdx
+++ b/docs/00_intro/20_data_life_cycle.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Data Life Cycle"
-slug: "/docs/data_life_cycle"
+slug: "/data_life_cycle"
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
