--- a/docs/10_domains/20_analytical_chemistry.mdx
+++ b/docs/10_domains/20_analytical_chemistry.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Analytical Chemistry"
 nfdi4chem-id: dac
-slug: "/docs/analytical_chemistry"
+slug: "/analytical_chemistry"
 ---
 
 import Methods from '@site/src/components/Methods.js';
