--- a/docs/20_role/00_role_guide.mdx
+++ b/docs/20_role/00_role_guide.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Guide"
-slug: "/docs/role_guide"
+slug: "/role_guide"
 ---
 
 import N4CFeatures from '/src/components/N4CFeatures.js';
