--- a/docs/20_role/20_research_group_member.mdx
+++ b/docs/20_role/20_research_group_member.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Research Group Member"
-slug: "/docs/research_group_member"
+slug: "/research_group_member"
 ---
 
 # Research Group Member
