--- a/docs/20_role/50_core_facility_manager.mdx
+++ b/docs/20_role/50_core_facility_manager.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Core facility manager"
-slug: "/docs/core_facility_manager"
+slug: "/core_facility_manager"
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
