--- a/docs/30_data/00_data_guide.mdx
+++ b/docs/30_data/00_data_guide.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Guide for Handling Data"
-slug: "/docs/data_guide"
+slug: "/data_guide"
 ---
 
 import IntroButton from '@site/src/components/IntroButton.js'
