--- a/docs/50_data_publication/10_repositories.mdx
+++ b/docs/50_data_publication/10_repositories.mdx
@@ -3,7 +3,7 @@ title: "Repositories"
 nfdi4chem-description: storage for preformatted data
 nfdi4chem-id: repositories
 nfdi4chem-tags: [data_organisation, data_storage, repositories]
-slug: "/docs/repositories"
+slug: "/repositories"
 ---
 
 ## Introduction
