--- a/docs/50_data_publication/40_lead-by-example.mdx
+++ b/docs/50_data_publication/40_lead-by-example.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Introduction"
-slug: "/docs/lead-by-example"
+slug: "/lead-by-example"
 ---
 
 import IntroButton from '@site/src/components/IntroButton.js'
