--- a/docs/10_domains/00_domain_guide.mdx
+++ b/docs/10_domains/00_domain_guide.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Guide"
-slug: "/docs/domain_guide"
+slug: "/domain_guide"
 ---
 
 import N4CFeatures from '/src/components/N4CFeatures.js';
