--- a/docs/20_role/10_research_group_leader.mdx
+++ b/docs/20_role/10_research_group_leader.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Research Group Leader"
-slug: "/docs/research_group_leader"
+slug: "/research_group_leader"
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
