--- a/docs/30_data/30_data_organisation.mdx
+++ b/docs/30_data/30_data_organisation.mdx
@@ -3,7 +3,7 @@ title: "Data Organisation"
 nfdi4chem-description: best practices to name and organise research data
 nfdi4chem-id: data_organisation
 nfdi4chem-tags: [data_organisation, data_storage, repositories]
-slug: "/docs/data_organisation"
+slug: "/data_organisation"
 ---
 
 After [documentation of your research data](/docs/data/data_documentation), more detailed descriptions of how your information is saved is required - a quick look at files and folders, but when working with many or large data sets, the advantages of databases can become relevant. Consider whether this applies to your project and whether only files exported from the database might be useful. For an idea about storage locations and storage methods see [Data Storage and Archiving](/docs/data/data_storage).
