--- a/docs/50_data_publication/20_choose_repository.mdx
+++ b/docs/50_data_publication/20_choose_repository.mdx
@@ -1,6 +1,6 @@
 ---
 title: "How to choose the right repository"
-slug: "/docs/choose_repository"
+slug: "/choose_repository"
 ---
 
 # How to choose the right repository
