chore: lbe slugs

--- a/docs/50_data_publication/40_lbe/10_datasets.mdx
+++ b/docs/50_data_publication/40_lbe/10_datasets.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Datasets"
 hide_table_of_contents: true
+slug: "/datasets"
 ---
 
 import Lbe from '@site/src/components/LeadByExample.js';
